--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,37 @@ body {
   color: #ddd;
   margin-left: 2rem;
   margin-top: 2rem;
-  font-family: 'roboto', sans-serif;
+  font-family: 'Open Sans', 'roboto', sans-serif;
+}
+
+div {
+  float: left;
+  margin: 10px;
 }
 
 ul {
   list-style: none;
   padding: 0;
-  margin-top: 0;
+  margin-top: .2rem;
+  line-height: 1.4;
 }
 
 img {
-  border: 2px solid red;
+  border: 15px solid gray;
+}
+
+#button {
+  font-size: 1rem;
+  padding: 12px 24px;
+  border-radius: 25px;
+  background: #444;
+  border: none;
+  color: #aaa;
+  outline: none;
+}
+
+#button:hover {
+  background: #888;
+  color: #fff;
+  font-weight: 500;
 }
